# monkeytale

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  release.yml
monkeytale/: __init__.py  file_management.py
tests/: test_cli.py  test_template.py  utils.py
tests/features/: cli.feature
tests/step_defs/: test_cli.py
