[tool.poetry]
name = "monkeytale"
version = "0.2.0"
description = "An opinionated markup language for composing, documenting, and visualizing a novel."
authors = ["Monkeytale <monkeytale@dwlib.com>"]
homepage = "https://github.com/MLAOPDX/monkeytale/"
readme = "README.md"
keywords = [
    "novel",
    "structure",
    "composition",
    "documentation",
    "visualization",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
click = "^8.0.0"
identify = "^2.5.0"
keyring = "^23.5.0"
loguru = "^0.6.0"
NRCLex = "^3.0.0"
pendulum = "^2.1.2"
python = "^3.10"
python-docx = "^0.8.11"
sh = "^1.14.2"
spacy = "^3.3.0"
textX = "^3.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = { extras = ["jupyter"], version = "^22.3.0" }
devtools = "^0.8.0"
hypothesis = "^6.46.1"
hypothesis-faker = "^0.0.23"
isort = "^5.10.1"
jupyter = "^1.0.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
"@" = "monkeytale.__init__:cli"
"monkeytale" = "monkeytale.__init__:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
major_on_zero = false # Version 0 allows breaking changes without bumping major version
repository = "testpypi" # Default to the safety of a test environment
upload_to_release = true # Github releases
upload_to_repository = true # PyPI or TestPyPI
version_pattern = ["README.md:# Monkeytale v{version}"]
version_variable = [
    "monkeytale/__init__.py:__version__",
    "pyproject.toml:version",
]
