[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [{ name = "Monkeytale", email = "monkeytale@dwlib.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "eliot>=1.14.0",
    "packaging>=21.3",
    # "identify>=2.5.0",
    # "NRCLex>=3.0.0",
    # "pendulum>=2.1.2",
    # "textblob>=0.17.1",
    # "textX>=3.0.0",
]
name = "monkeytale"
version = "0.3.0"
description = "An opinionated markup language for composing, documenting, and visualizing a novel."
license = { text = "Unlicense" }
readme = "README.md"
keywords = [
    "novel",
    "structure",
    "composition",
    "documentation",
    "visualization",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/MLAOPDX/monkeytale/"
Repository = "https://github.com/MLAOPDX/monkeytale/"
Changelog = "https://github.com/MLAOPDX/monkeytale/blob/main/CHANGELOG.md"

[project.scripts]
"@" = "monkeytale.__init__:cli"
monkeytale = "monkeytale.__init__:cli"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
includes = ["monkeytale"]

[tool.pdm.dev-dependencies]
format = ["black[jupyter]>=22.3.0", "isort>=5.10.1"]
# setuptools is needed to avoid missing module pkg_resources
test = [
    "bandit>=1.7.4",
    "devtools>=0.8.0",
    "eliot-tree>=21.0.0",
    "hypothesis>=6.46.1",
    "hypothesis-faker>=0.0.23",
    "pytest>=7.1.2",
    "pytest-bdd>=5.0.0",
    "pytest-cov>=3.0.0",
    "setuptools>=62.3.2",
    "sh>=1.14.2",
]
jupyter = ["jupyter>=1.0.0"]
Deploy = []

[tool.semantic_release]
branch = "main"
build_command = "pdm build"
major_on_zero = false # Version 0 allows breaking changes without bumping major version
repository = "testpypi" # Default to the safety of a test environment
upload_to_release = true # Create Github releases
upload_to_repository = true # Publish to artifact repository
version_variable = [
    "monkeytale/__init__.py:__version__",
    "pyproject.toml:version",
]

[tool.pytest.ini_options]
minversion = "6.0"
# Report out failures and Hypothesis results
# - skip __pypackages__ to avoid discovery of tests from dependencies (PEP582)
addopts = "--ignore=__pypackages__ --hypothesis-show-statistics --cov-report xml:tests/cov.xml --cov=monkeytale -ra"
testpaths = ["tests"]
markers = ["WIP: Work In Progress"]

[tool.black]
target-version = ['py310']
experimental-string-processing = true
safe = true
